--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.servlet.encoding.enabled=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force-response=true
+server.servlet.encoding.force=true
